Fix navbar dropdown on small screen sizes

--- a/web/assets/css/hpo.css
+++ b/web/assets/css/hpo.css
@@ -10,6 +10,9 @@
 .navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-text, .navbar-inverse .nav-link {
     color: #ddd !important; /* increase contrast */
 }
+.navbar-inverse .navbar-toggler {
+    background-color: #ddd;
+}
 @media(max-width:767px) {
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
         color: #ddd; /* increase contrast */
